--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
     padding: 0;
     margin: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     overflow-x: hidden;
     justify-content: center;
@@ -37,6 +37,7 @@ body {
     height: fit-content;
     overflow: hidden;
     margin-top: 4rem;
+    margin-bottom: 3rem;
     padding: 1rem 0rem;
     border-radius: 15px;
     display: flex;
